GpMessages/17187076616700
<?xml version="1.0" encoding="utf-8"?><messages><msg code="0" type="2">Start Time: miércoles, 19 de junio de 2024 16:18:55</msg><msg code="-2147467259" type="100">﻿  File "C:\Users\nicos\Documents\ArcGIS\Packages\DAG_1s2024_L_TRABAJO_1_PARTE_2_NSR_85fdab\commondata\dag_1s2024_l_trabajo_1_parte_2_nsr.gdb\Toolbox#supervaloresmanz_NewToolbox.py", line 1
    C:\Users\nicos\AppData\Local\Temp\ArcGISProTemp26880\tmplyvsms.py
       ^
﻿SyntaxError: unexpected character after line continuation character
</msg><msg code="0" type="0">Failed script 2.1 Supermercados...</msg><msg code="-2147467259" type="100">Failed to execute (supervaloresmanz).</msg><msg code="0" type="3">Failed at miércoles, 19 de junio de 2024 16:18:55 (Elapsed Time: 0,16 seconds)</msg></messages>